# tongate

./: .gitignore  CMakeLists.txt  README.md  VPN-MARKET.md  adnl-pong.cpp  client.cpp  socks.cpp  ton-global.config.json  tongate-vpn.cpp  tongate.cpp  tongate.h
src/: CMakeLists.txt  client.cpp  discover.cpp  server.cpp  server.h  socks.cpp  socks.hpp  tongate.cpp  tunnel-client.hpp  tunnel-server.cpp  tunnel-server.hpp  utun.cpp
